--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@upstash/redis": "^1.35.3",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
