--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "next": "15.5.0",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.4",
